added feng_to_bandpass 'test'

--- a/psrdada_cpp/meerkat/tools/CMakeLists.txt
+++ b/psrdada_cpp/meerkat/tools/CMakeLists.txt
@@ -10,4 +10,13 @@ set(psrdada_cpp_meerkat_tools_src
 cuda_add_executable(feng2pb ${psrdada_cpp_meerkat_tools_src})
 target_link_libraries(feng2pb ${PSRDADA_CPP_LIBRARIES})
 
+set(psrdada_cpp_meerkat_tools_test_src
+    src/feng_to_bandpass.cu
+    src/feng_to_bandpass_test.cu
+   )
+
+#feng2pb_test
+cuda_add_executable(feng2pb_test ${psrdada_cpp_meerkat_tools_test_src})
+target_link_libraries(feng2pb_test ${PSRDADA_CPP_LIBRARIES})
+
 endif(ENABLE_CUDA)
