updated build system to avoid recompiling kernels

--- a/psrdada_cpp/meerkat/tools/CMakeLists.txt
+++ b/psrdada_cpp/meerkat/tools/CMakeLists.txt
@@ -1,23 +1,33 @@
 
 if(ENABLE_CUDA)
 
+set(PSRDADA_CPP_MEERKAT_TOOLS_LIBRARIES
+    ${CMAKE_PROJECT_NAME}
+    ${CMAKE_PROJECT_NAME}_meerkat_tools
+    ${DEPENDENCY_LIBRARIES})
+
 set(psrdada_cpp_meerkat_tools_src
     src/feng_to_bandpass.cu
-    src/feng_to_bandpass_cli.cu
-   )
+    src/feng_to_dada.cu
+    )
+
+cuda_add_library(${CMAKE_PROJECT_NAME}_meerkat_tools ${psrdada_cpp_meerkat_tools_src})
 
 #feng2pb
-cuda_add_executable(feng2pb ${psrdada_cpp_meerkat_tools_src})
-target_link_libraries(feng2pb ${PSRDADA_CPP_LIBRARIES})
+cuda_add_executable(feng2pb src/feng_to_bandpass_cli.cu)
+target_link_libraries(feng2pb ${PSRDADA_CPP_MEERKAT_TOOLS_LIBRARIES})
 install(TARGETS feng2pb DESTINATION bin)
 
-set(psrdada_cpp_meerkat_tools_test_src
-    src/feng_to_bandpass.cu
-    src/feng_to_bandpass_test.cu
-   )
-
 #feng2pb_test
-cuda_add_executable(feng2pb_test ${psrdada_cpp_meerkat_tools_test_src})
-target_link_libraries(feng2pb_test ${PSRDADA_CPP_LIBRARIES})
+cuda_add_executable(feng2pb_test src/feng_to_bandpass_test.cu)
+target_link_libraries(feng2pb_test ${PSRDADA_CPP_MEERKAT_TOOLS_LIBRARIES})
+
+#feng2dada
+cuda_add_executable(feng2dada src/feng_to_dada_cli.cu)
+target_link_libraries(feng2dada ${PSRDADA_CPP_MEERKAT_TOOLS_LIBRARIES})
+
+#feng2dada_test
+cuda_add_executable(feng2dada_test src/feng_to_dada_test.cu)
+target_link_libraries(feng2dada_test ${PSRDADA_CPP_MEERKAT_TOOLS_LIBRARIES})
 
 endif(ENABLE_CUDA)
