--- a/psrdada_cpp/meerkat/tools/CMakeLists.txt
+++ b/psrdada_cpp/meerkat/tools/CMakeLists.txt
@@ -25,6 +25,7 @@ target_link_libraries(feng2bp_test ${PSRDADA_CPP_MEERKAT_TOOLS_LIBRARIES})
 #feng2dada
 cuda_add_executable(feng2dada src/feng_to_dada_cli.cu)
 target_link_libraries(feng2dada ${PSRDADA_CPP_MEERKAT_TOOLS_LIBRARIES})
+install(TARGETS feng2dada DESTINATION bin)
 
 #feng2dada_test
 cuda_add_executable(feng2dada_test src/feng_to_dada_test.cu)
