renamed source files and changed paths

--- a/psrdada_cpp/effelsberg/edd/CMakeLists.txt
+++ b/psrdada_cpp/effelsberg/edd/CMakeLists.txt
@@ -6,13 +6,13 @@ set(PSRDADA_CPP_EFFELSBERG_EDD_LIBRARIES
     ${DEPENDENCY_LIBRARIES})
 
 set(psrdada_cpp_effelsberg_edd_src
-    src/edd_simple_fft_spectrometer.cu
+    src/eddfft.cu
     )
 
 cuda_add_library(${CMAKE_PROJECT_NAME}_effelsberg_edd ${psrdada_cpp_effelsberg_edd_src})
 
 #simple FFT spectrometer test
-cuda_add_executable(edd_specpol src/edd_simple_fft_spectrometer_test.cu)
+cuda_add_executable(edd_specpol src/eddfft_test.cu)
 target_link_libraries(edd_specpol ${PSRDADA_CPP_EFFELSBERG_EDD_LIBRARIES})
 install(TARGETS edd_specpol DESTINATION bin)
 
