--- a/psrdada_cpp/effelsberg/edd/CMakeLists.txt
+++ b/psrdada_cpp/effelsberg/edd/CMakeLists.txt
@@ -13,7 +13,7 @@ cuda_add_library(${CMAKE_PROJECT_NAME}_effelsberg_edd ${psrdada_cpp_effelsberg_e
 
 #simple FFT spectrometer test
 cuda_add_executable(edd_specpol src/eddfft_test.cu)
-target_link_libraries(edd_specpol ${PSRDADA_CPP_EFFELSBERG_EDD_LIBRARIES})
+target_link_libraries(edd_specpol ${PSRDADA_CPP_EFFELSBERG_EDD_LIBRARIES} cufft)
 install(TARGETS edd_specpol DESTINATION bin)
 
 
