added command line interface for eddfft

--- a/psrdada_cpp/effelsberg/edd/CMakeLists.txt
+++ b/psrdada_cpp/effelsberg/edd/CMakeLists.txt
@@ -12,9 +12,13 @@ set(psrdada_cpp_effelsberg_edd_src
 cuda_add_library(${CMAKE_PROJECT_NAME}_effelsberg_edd ${psrdada_cpp_effelsberg_edd_src})
 
 #simple FFT spectrometer test
-cuda_add_executable(edd_specpol src/eddfft_test.cu)
-target_link_libraries(edd_specpol ${PSRDADA_CPP_EFFELSBERG_EDD_LIBRARIES} cufft)
-install(TARGETS edd_specpol DESTINATION bin)
+cuda_add_executable(eddfft_test src/eddfft_test.cu)
+target_link_libraries(eddfft_test ${PSRDADA_CPP_EFFELSBERG_EDD_LIBRARIES} cufft)
+install(TARGETS eddfft_test DESTINATION bin)
 
+#simple FFT spectrometer interface
+cuda_add_executable(eddfft src/eddfft_cli.cu)
+target_link_libraries(eddfft ${PSRDADA_CPP_EFFELSBERG_EDD_LIBRARIES} cufft)
+install(TARGETS eddfft DESTINATION bin)
 
 endif(ENABLE_CUDA)
