--- a/psrdada_cpp/CMakeLists.txt
+++ b/psrdada_cpp/CMakeLists.txt
@@ -45,10 +45,14 @@ add_library(${CMAKE_PROJECT_NAME} ${psrdada_cpp_src})
 add_executable(junkdb examples/junkdb.cpp)
 target_link_libraries (junkdb ${PSRDADA_CPP_LIBRARIES})
 
+#transpose_to_dada_cli
+add_executable(transpose_to_dada_cli src/transpose_to_dada_cli.cpp)
+target_link_libraries (transpose_to_dada_cli ${PSRDADA_CPP_LIBRARIES}) 
+
 #dbnull
 add_executable(dbnull examples/dbnull.cpp)
 target_link_libraries (dbnull ${PSRDADA_CPP_LIBRARIES})
-install (TARGETS junkdb dbnull DESTINATION bin)
+install (TARGETS junkdb dbnull  transpose_to_dada_cli DESTINATION bin)
 #install (FILES MathFunctions.h DESTINATION include)
 
 add_subdirectory(meerkat)
