tentatively working transpose pipeline. Underperforming

--- a/psrdada_cpp/CMakeLists.txt
+++ b/psrdada_cpp/CMakeLists.txt
@@ -18,6 +18,7 @@ set(psrdada_cpp_src
     src/transpose_to_dada.cpp
     src/transpose_to_dada_cli.cpp
     src/transpose_to_file_cli.cpp
+    src/transpose_to_null_cli.cpp
     src/simple_file_writer.cpp
     src/sigprocheader.cpp
     src/psrdadaheader.cpp
@@ -58,6 +59,11 @@ target_link_libraries (transpose_to_dada_cli ${PSRDADA_CPP_LIBRARIES})
 #transpose_to_files_cli
 add_executable(transpose_to_file_cli src/transpose_to_file_cli.cpp)
 target_link_libraries (transpose_to_file_cli ${PSRDADA_CPP_LIBRARIES})
+
+#transpose_to_null_cli
+add_executable(transpose_to_null_cli src/transpose_to_null_cli.cpp)
+target_link_libraries (transpose_to_null_cli ${PSRDADA_CPP_LIBRARIES})
+
 
 #dbnull
 add_executable(dbnull examples/dbnull.cpp)
