--- a/psrdada_cpp/CMakeLists.txt
+++ b/psrdada_cpp/CMakeLists.txt
@@ -9,6 +9,7 @@ set(psrdada_cpp_src
     src/dada_client_base.cpp
     src/dada_write_client.cpp
     src/dada_null_sink.cpp
+    src/dada_disk_sink.cpp
     src/dada_output_stream.cpp
     src/dada_read_client.cpp
     src/dada_write_client.cpp
@@ -41,7 +42,11 @@ target_link_libraries (junkdb ${PSRDADA_CPP_LIBRARIES})
 add_executable(dbnull examples/dbnull.cpp)
 target_link_libraries (dbnull ${PSRDADA_CPP_LIBRARIES})
 
-install (TARGETS junkdb dbnull DESTINATION bin)
+#dbnull
+add_executable(dbdisk examples/dbdisk.cpp)
+target_link_libraries (dbnull ${PSRDADA_CPP_LIBRARIES})
+
+install (TARGETS junkdb dbnull dbdisk DESTINATION bin)
 
 #include subdirs
 add_subdirectory(meerkat)
