added build rules

--- a/psrdada_cpp/meerkat/fbfuse/CMakeLists.txt
+++ b/psrdada_cpp/meerkat/fbfuse/CMakeLists.txt
@@ -7,6 +7,7 @@ set(PSRDADA_CPP_MEERKAT_FBFUSE_LIBRARIES
 
 set(psrdada_cpp_meerkat_fbfuse_src
     src/PipelineConfig.cpp
+    src/Header.cpp
     )
 
 cuda_add_library(${CMAKE_PROJECT_NAME}_meerkat_fbfuse ${psrdada_cpp_meerkat_fbfuse_src})
