--- a/psrdada_cpp/meerkat/fbfuse/test/CMakeLists.txt
+++ b/psrdada_cpp/meerkat/fbfuse/test/CMakeLists.txt
@@ -8,5 +8,5 @@ set(
     src/gtest_fbfuse.cpp
 )
 add_executable(gtest_fbfuse ${gtest_fbfuse_src} )
-target_link_libraries(gtest_fbfuse ${PSRDADA_CPP_MEERKAT_FBFUSE_LIBRARIES} ${GTEST_LIBRARIES})
+target_link_libraries(gtest_fbfuse ${PSRDADA_CPP_MEERKAT_FBFUSE_LIBRARIES})
 add_test(gtest_fbfuse gtest_fbfuse --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
