--- a/psrdada_cpp/meerkat/fbfuse/test/CMakeLists.txt
+++ b/psrdada_cpp/meerkat/fbfuse/test/CMakeLists.txt
@@ -6,6 +6,7 @@ set(
     gtest_fbfuse_src
     src/CoherentBeamformerTester.cu
     src/DelayManagerTester.cu
+    src/IncoherentBeamformerTester.cu
     src/SplitTransposeTester.cu
     src/WeightsManagerTester.cu
     src/gtest_fbfuse.cu
