--- a/psrdada_cpp/meerkat/fbfuse/test/CMakeLists.txt
+++ b/psrdada_cpp/meerkat/fbfuse/test/CMakeLists.txt
@@ -5,6 +5,7 @@ link_directories(${GTEST_LIBRARY_DIR})
 set(
     gtest_fbfuse_src
     src/CoherentBeamformerTester.cu
+    src/DelayEngineSimulator.cpp
     src/DelayManagerTester.cu
     src/IncoherentBeamformerTester.cu
     src/SplitTransposeTester.cu
