changed cpp to cu to support float2

--- a/psrdada_cpp/meerkat/fbfuse/CMakeLists.txt
+++ b/psrdada_cpp/meerkat/fbfuse/CMakeLists.txt
@@ -8,7 +8,7 @@ set(PSRDADA_CPP_MEERKAT_FBFUSE_LIBRARIES
 set(psrdada_cpp_meerkat_fbfuse_src
     src/PipelineConfig.cpp
     src/Header.cpp
-    src/DelayEngineSimulator.cpp
+    src/DelayEngineSimulator.cu
     src/DelayManager.cu
     src/IncoherentBeamformer.cu
     src/CoherentBeamformer.cu
