first pass on pipeline tester

--- a/psrdada_cpp/meerkat/fbfuse/test/CMakeLists.txt
+++ b/psrdada_cpp/meerkat/fbfuse/test/CMakeLists.txt
@@ -7,6 +7,7 @@ set(
     src/CoherentBeamformerTester.cu
     src/DelayManagerTester.cu
     src/IncoherentBeamformerTester.cu
+    src/PipelineTester.cu
     src/SplitTransposeTester.cu
     src/WeightsManagerTester.cu
     src/gtest_fbfuse.cu
