changes to build system

--- a/psrdada_cpp/CMakeLists.txt
+++ b/psrdada_cpp/CMakeLists.txt
@@ -60,10 +60,10 @@ add_executable(dbnull examples/dbnull.cpp)
 target_link_libraries (dbnull ${PSRDADA_CPP_LIBRARIES})
 
 #dbisk
-add_executable(dbdisk examples/dbdisk.cpp)
-target_link_libraries (dbnull ${PSRDADA_CPP_LIBRARIES})
+#add_executable(dbdisk examples/dbdisk.cpp)
+#target_link_libraries (dbisk ${PSRDADA_CPP_LIBRARIES})
 
-install (TARGETS junkdb dbnull dbdisk syncdb fbfuse_output_db DESTINATION bin)
+install (TARGETS junkdb dbnull syncdb fbfuse_output_db DESTINATION bin)
 install (TARGETS ${CMAKE_PROJECT_NAME}
   RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib
