--- a/psrdada_cpp/effelsberg/edd/test/CMakeLists.txt
+++ b/psrdada_cpp/effelsberg/edd/test/CMakeLists.txt
@@ -6,6 +6,7 @@ set(
     gtest_edd_src
     src/UnpackerTester.cu
     src/DetectorAccumulatorTester.cu
+    src/FftSpectrometerTester.cu
 )
 cuda_add_executable(gtest_edd ${gtest_edd_src} )
 target_link_libraries(gtest_edd ${PSRDADA_CPP_EFFELSBERG_EDD_LIBRARIES})
