--- a/psrdada_cpp/effelsberg/edd/test/CMakeLists.txt
+++ b/psrdada_cpp/effelsberg/edd/test/CMakeLists.txt
@@ -4,9 +4,10 @@ link_directories(${GTEST_LIBRARY_DIR})
 
 set(
     gtest_edd_src
-    src/UnpackerTester.cu
     src/DetectorAccumulatorTester.cu
     src/FftSpectrometerTester.cu
+    src/UnpackerTester.cu
+    src/ScaledTransposeTFtoTFT.cu
 )
 cuda_add_executable(gtest_edd ${gtest_edd_src} )
 target_link_libraries(gtest_edd ${PSRDADA_CPP_EFFELSBERG_EDD_LIBRARIES} ${CUDA_CUFFT_LIBRARIES})
