Added unit tests to test_file_writer. They pass (as of now).

--- a/psrdada_cpp/meerkat/tuse/test/CMakeLists.txt
+++ b/psrdada_cpp/meerkat/tuse/test/CMakeLists.txt
@@ -3,9 +3,11 @@ link_directories(${GTEST_LIBRARY_DIR})
 
 set(
     gtest_tuse_src
-
+    src/TestFileWriterTest.cpp
+    src/TransposeTest.cpp
+    src/gtest_tuse.cpp
 )
 
-#cuda_add_executable(gtest_fbfuse ${gtest_tuse_src} )
-#target_link_libraries(gtest_tuse ${PSRDADA_CPP_MEERKAT_TUSE_LIBRARIES})
+add_executable(gtest_tuse ${gtest_tuse_src} )
+target_link_libraries(gtest_tuse ${PSRDADA_CPP_MEERKAT_TUSE_LIBRARIES})
 #add_test(gtest_tuse gtest_tuse --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
