--- a/psrdada_cpp/meerkat/tuse/CMakeLists.txt
+++ b/psrdada_cpp/meerkat/tuse/CMakeLists.txt
@@ -27,8 +27,8 @@ target_link_libraries (transpose_to_mult_files_cli ${PSRDADA_CPP_MEERKAT_TUSE_LI
 
 
 #dada_dbevent
-add_executable(dada_dbevent src/dada_dbevent.cpp)
-target_link_libraries (dada_dbevent ${PSRDADA_CPP_MEERKAT_TUSE_LIBRARIES})
+#add_executable(dada_dbevent src/dada_dbevent.cpp)
+#target_link_libraries (dada_dbevent ${PSRDADA_CPP_MEERKAT_TUSE_LIBRARIES})
 
 install (TARGETS transpose_to_null_cli transpose_to_file_cli transpose_to_dada_cli transpose_to_mult_files_cli DESTINATION bin)
 install(FILES transpose_to_dada.hpp DESTINATION include/psrdada_cpp/meerkat/tuse)
