Prototype for vdif_send

--- a/psrdada_cpp/effelsberg/edd/CMakeLists.txt
+++ b/psrdada_cpp/effelsberg/edd/CMakeLists.txt
@@ -30,6 +30,10 @@ cuda_add_executable(VLBI src/VLBI_cli.cu)
 target_link_libraries(VLBI ${PSRDADA_CPP_EFFELSBERG_EDD_LIBRARIES} ${CUDA_CUFFT_LIBRARIES} -lcublas)
 install(TARGETS VLBI DESTINATION bin)
 
+cuda_add_executable(vdif_send src/vdif_send.cu)
+target_link_libraries(vdif_send ${PSRDADA_CPP_EFFELSBERG_EDD_LIBRARIES} ${CUDA_CUFFT_LIBRARIES})
+install(TARGETS VLBI DESTINATION bin)
+
 cuda_add_executable(dada_dummy_data src/dummy_data_generator.cu)
 target_link_libraries(dada_dummy_data ${PSRDADA_CPP_EFFELSBERG_EDD_LIBRARIES} ${CUDA_CUFFT_LIBRARIES})
 install(TARGETS VLBI DESTINATION bin)
