added first pass on beam_bandpass cli

--- a/psrdada_cpp/meerkat/fbfuse/CMakeLists.txt
+++ b/psrdada_cpp/meerkat/fbfuse/CMakeLists.txt
@@ -23,6 +23,10 @@ cuda_add_executable(fbfuse src/fbfuse_cli.cu)
 target_link_libraries(fbfuse ${PSRDADA_CPP_MEERKAT_FBFUSE_LIBRARIES})
 install(TARGETS fbfuse DESTINATION bin)
 
+cuda_add_executable(beam_bandpass src/beam_bandpass.cpp)
+target_link_libraries(beam_bandpass ${PSRDADA_CPP_MEERKAT_FBFUSE_LIBRARIES})
+install(TARGETS beam_bandpass DESTINATION bin)
+
 add_subdirectory(test)
 
 endif(ENABLE_CUDA)
