--- a/psrdada_cpp/meerkat/fbfuse/CMakeLists.txt
+++ b/psrdada_cpp/meerkat/fbfuse/CMakeLists.txt
@@ -27,7 +27,7 @@ cuda_add_executable(beam_bandpass src/beam_bandpass_cli.cpp)
 target_link_libraries(beam_bandpass ${PSRDADA_CPP_MEERKAT_FBFUSE_LIBRARIES})
 install(TARGETS beam_bandpass DESTINATION bin)
 
-cuda_add_executable(beam_bandpass src/beam_bandpass_shm_cli.cpp)
+cuda_add_executable(beam_bandpass_shm src/beam_bandpass_shm_cli.cpp)
 target_link_libraries(beam_bandpass_shm ${PSRDADA_CPP_MEERKAT_FBFUSE_LIBRARIES})
 install(TARGETS beam_bandpass_shm DESTINATION bin)
 
